# finances-axum-db

./: Cargo.toml
migrations/: 20250503165945_create_transactions.sql
src/: db.rs  forms.rs  handlers.rs  main.rs  models.rs
templates/: edit_transaction.html  index.html  transaction_row.html
