[package]
name = "finances-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bigdecimal = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "bigdecimal"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tera = "1"
tower-http = { version = "0.6.2", features = ["fs"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
